--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Project questions and changes summary for local development and planning
+CHANGES_SUMMARY.md
+PROJECT_QUESTIONS.md
