--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,5 @@ MAX_TXS_PER_BLOCK=100
 # Block creation interval (seconds)
 BLOCK_INTERVAL_SEC=1
 
-# Port for HTTP API (when implemented)
+# Port for HTTP API
 SEQUENCER_PORT=8080
