--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "zkclear-api"
 path = "src/main.rs"
 
+[features]
+default = ["rocksdb"]
+rocksdb = ["zkclear-storage/rocksdb"]
+
 [dependencies]
 zkclear-types = { path = "../types" }
 zkclear-state = { path = "../state" }
