--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -25,4 +25,6 @@ tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
 hex = "0.4"
 bincode = "1.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
