--- a/crates/watcher/Cargo.toml
+++ b/crates/watcher/Cargo.toml
@@ -13,4 +13,6 @@ hex = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
 anyhow = "1.0"
 futures = "0.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
