--- a/crates/watcher/Cargo.toml
+++ b/crates/watcher/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 zkclear-types = { path = "../types" }
 zkclear-sequencer = { path = "../sequencer" }
+zkclear-storage = { path = "../storage" }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -15,4 +16,7 @@ anyhow = "1.0"
 futures = "0.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[dev-dependencies]
+tokio-test = "0.4"
 
