--- a/crates/prover/Cargo.toml
+++ b/crates/prover/Cargo.toml
@@ -26,13 +26,15 @@ ark-bn254 = { version = "0.5", optional = true }
 ark-ec = { version = "0.5", optional = true }
 ark-ff = { version = "0.5", optional = true }
 ark-std = { version = "0.5", optional = true }
+ark-serialize = { version = "0.5", optional = true }
+ark-snark = { version = "0.5", optional = true }
 ark-r1cs-std = { version = "0.5", optional = true }
 ark-relations = { version = "0.5", optional = true }
 
 [features]
 default = []
 winterfell = ["dep:winterfell"]
-arkworks = ["dep:ark-groth16", "dep:ark-bn254", "dep:ark-ec", "dep:ark-ff", "dep:ark-std", "dep:ark-r1cs-std", "dep:ark-relations"]
+arkworks = ["dep:ark-groth16", "dep:ark-bn254", "dep:ark-ec", "dep:ark-ff", "dep:ark-std", "dep:ark-r1cs-std", "dep:ark-relations", "dep:ark-serialize", "dep:ark-snark"]
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["full"] }
