--- a/crates/prover/Cargo.toml
+++ b/crates/prover/Cargo.toml
@@ -17,10 +17,10 @@ thiserror = "1.0"
 async-trait = "0.1"
 hex = "0.4"
 chrono = "0.4"
+tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
 
 # ZK Proof libraries
-# Winterfell for STARK proofs (reliable, well-maintained, available on crates.io)
-winterfell = { version = "0.13", optional = true, features = ["std", "concurrent"] }
+# Custom minimal STARK prover (replacing Winterfell due to assertion issues)
 # Arkworks Groth16 for SNARK proofs (wrapping STARK proofs for on-chain verification)
 # Arkworks is a popular, stable library that works on stable Rust
 ark-groth16 = { version = "0.5", optional = true }
@@ -35,11 +35,12 @@ ark-relations = { version = "0.5", optional = true }
 
 [features]
 default = []
-winterfell = ["dep:winterfell"]
+stark = []  # Custom minimal STARK prover (always enabled, no external dependencies)
 arkworks = ["dep:ark-groth16", "dep:ark-bn254", "dep:ark-ec", "dep:ark-ff", "dep:ark-std", "dep:ark-r1cs-std", "dep:ark-relations", "dep:ark-serialize", "dep:ark-snark"]
+bin = ["tokio"]  # Feature for binary targets that need tokio
 
 [dev-dependencies]
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["full", "rt", "macros"] }
 
 [[bin]]
 name = "export_verifying_key"
@@ -54,5 +55,5 @@ required-features = ["arkworks"]
 [[bin]]
 name = "generate_and_format_proof"
 path = "src/bin/generate_and_format_proof.rs"
-required-features = ["winterfell", "arkworks"]
+required-features = ["stark", "arkworks", "bin"]
 
