--- a/crates/prover/Cargo.toml
+++ b/crates/prover/Cargo.toml
@@ -21,7 +21,7 @@ chrono = "0.4"
 tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
 
 # ZK Proof libraries
-# Custom minimal STARK prover (replacing Winterfell due to assertion issues)
+# Custom minimal STARK prover
 # Arkworks Groth16 for SNARK proofs (wrapping STARK proofs for on-chain verification)
 # Arkworks is a popular, stable library that works on stable Rust
 ark-groth16 = { version = "0.5", optional = true }
